Overview of changes in Glib::Object::Introspection 0.019
========================================================

* Fix spelling of two internal functions
* Fix off-by-one error in internal string comparison

Overview of changes in Glib::Object::Introspection 0.018
========================================================

* Fix registering unregistered enums.
* Mark a few tests as known to fail so that they do not abort installation.

Overview of changes in Glib::Object::Introspection 0.017
========================================================

* Register unregistered enums so that, e.g., GSpawnFlags and VtePtyFlags become
  usable.
* Pass on NULL user data in C invocations if appropriate

Overview of changes in Glib::Object::Introspection 0.016
========================================================

* Add support for unicode character arguments to Perl callbacks.
* Avoid misusing the macro PL_na, thus preventing issues when
  Glib::Object::Introspection is used in conjunction with certain XS modules,
  among them XML::Parser and String::Approx.
* Fix build on MinGW with dmake.

Overview of changes in Glib::Object::Introspection 0.015
========================================================

* Add support for array arguments to Perl callbacks.
* Allow Perl code to return Glib::Error objects.
* Register error domains.
* Support conversion to raw structs from unregistered libraries.

Overview of changes in Glib::Object::Introspection 0.014
========================================================

* Implement generic signal marshalling.
* Implement a generic constructor for boxed types and install it as
  Glib::Boxed::new.
* Generate error messages when functions are passed an incorrect number of
  parameters.
* Avoid using vfunc names that coincide with special Perl subs.  This fixes
  double-frees occurring for subclasses of Gtk3::Widget.
* Rework the way fallback vfuncs are installed.