@@ -1,3 +1,9 @@
+Overview of changes in Glib::Object::Introspection 0.020
+========================================================
+
+* Allow undefined values for boolean arguments (and interpret them as "false").
+* Fix a few internal signed/unsigned integer mismatches.
+
 Overview of changes in Glib::Object::Introspection 0.019
 ========================================================
 
